# Pharmacy_management_system

./: .gitignore  CMakeLists.txt  Cashier.txt  LICENSE  Pharmacist.txt  README.md  customer.txt  main  main.cpp  pharmcy.cpp  pharmcy.h
data/: medicines.txt
include/: Customer.h  Employee.h  Functions.h  Menu.h  Person.h  Product.h
